tests/e2e/regex_after_name2.error
Error: syntax error in story at line 2, column 3

2|    a /regexp/
        ^

E0056: Expected end of line instead of `/regexp/`.
